tests/ui/g-core-owned-control-label-custom-kind.stderr
error[E0277]: the trait bound `hibana::global::ControlLabelContract<57, FakeRouteDecisionKind>: hibana::global::ValidControlLabel` is not satisfied
  --> tests/ui/g-core-owned-control-label-custom-kind.rs:49:9
   |
49 | /         g::Msg<
50 | |             57,
51 | |             GenericCapToken<FakeRouteDecisionKind>,
52 | |             FakeRouteDecisionKind,
53 | |         >,
   | |_________^ the trait `hibana::global::ValidControlLabel` is not implemented for `hibana::global::ControlLabelContract<57, FakeRouteDecisionKind>`
   |
   = help: the following other types implement trait `hibana::global::ValidControlLabel`:
             hibana::global::ControlLabelContract<106, K>
             hibana::global::ControlLabelContract<107, K>
             hibana::global::ControlLabelContract<108, K>
             hibana::global::ControlLabelContract<109, K>
             hibana::global::ControlLabelContract<110, K>
             hibana::global::ControlLabelContract<111, K>
             hibana::global::ControlLabelContract<112, K>
             hibana::global::ControlLabelContract<113, K>
           and $N others
   = note: required for `hibana::global::Message<hibana::global::LabelMarker<57>, GenericCapToken<FakeRouteDecisionKind>, FakeRouteDecisionKind>` to implement `hibana::global::MessageControlSpec`
note: required by a bound in `send`
  --> src/global.rs
   |
   | pub const fn send<From, To, M, const LANE: u8>()
   |              ---- required by a bound in this function
...
   |     M: MessageSpec + SendableLabel + MessageControlSpec,
   |                                      ^^^^^^^^^^^^^^^^^^ required by this bound in `send`
